# ai-coding-mvp

./: README.md  pyproject.toml  taskfile.yaml
ai_coding_app/: db.sqlite3
ai_coding_app/app/: models.py  urls.py  vector_store.py  views.py
ai_coding_app/app/migrations/: 0002_medicalnote.py
scripts/: test_api_script.py
